--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -3,11 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Hotdog</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/hotdog.html">Hotdog</a>
+        <h1>Hotdog</h1>
+        <a href="../index.html">Home</a>
     </body>
 </html>
