Add more information to hotdog
I added more information to the hotdog page.

--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -9,5 +9,20 @@
     <body>
         <h1>Hotdog</h1>
         <a href="../index.html">Home</a>
+        <img src="../images/hotdog.jpg" alt="A deliciously cooked hotdog">
+        <h2>Delicious weiners</h2>
+        <p>Hot dogs are cylindrical casings filled with ground meat.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Hotdogs</li>
+            <li>Buns</li>
+            <li>Toppings (Optional)</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook hotdogs via boiling, frying, microwaving, or grilling.</li>
+            <li>Place a cooked hotdog into a bun.</li>
+            <li>Top with toppings to your preference.</li>
+        </ol>
     </body>
 </html>
