Add other recipes + fix spelling mistakes
I added other recipes and fixed some existing spelling mistakes.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/hotdog.html">Hotdog</a>
+        <ul>
+            <a href="recipes/hotdog.html">Hotdog</a>
+            <a href="recipes/burger.html">Burger</a>
+            <a href="recipes/sandwich.html">Sandwich</a>
+        </ul>
     </body>
 </html>
