--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,25 +3,26 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Hotdog</title>
+        <title>Burger</title>
     </head>
 
     <body>
         <h1>Hotdog</h1>
         <a href="../index.html">Home</a>
-        <img src="../images/hotdog.jpg" alt="A deliciously cooked hotdog" width="100">
-        <h2>Delicious weiners</h2>
-        <p>Hot dogs are cylindrical casings filled with ground meat.</p>
+        <img src="../images/burger.png" alt="A clipart of a burger" width="100">
+        <h2>Delicious Burgers</h2>
+        <p>Burgers are a beef patty between two buns.</p>
         <h2>Ingredients</h2>
         <ul>
-            <li>Hotdogs</li>
+            <li>Ground beef</li>
             <li>Buns</li>
             <li>Toppings (Optional)</li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Cook hotdogs via boiling, frying, microwaving, or grilling.</li>
-            <li>Place a cooked hotdog into a bun.</li>
+            <li>Shape ground beef into flat patties.</li>
+            <li>Cook shaped patties via frying or grilling.</li>
+            <li>Place a cooked patty on a bun.</li>
             <li>Top with toppings to your preference.</li>
         </ol>
     </body>
